--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-Flask=1.1.1
-Flask-Login=0.5.0
-Flask-RESTful=0.3.8
-Flask-WTF=0.14.3
-Pillow=5.4.1
-SQLAlchemy=1.3.13
-SQLAlchemy-serializer=1.3.4.2
-WTForms=2.2.1
-paginate-sqlalchemy=0.3.0
-python-telegram-bot=12.6.1
-pyOpenSSL=19.1.0
-paginate=0.5.6
-PySocks=1.7.1
+Flask==1.1.1
+Flask-Login==0.5.0
+Flask-RESTful==0.3.8
+Flask-WTF==0.14.3
+Pillow==5.4.1
+SQLAlchemy==1.3.13
+SQLAlchemy-serializer==1.3.4.2
+WTForms==2.2.1
+paginate-sqlalchemy==0.3.0
+python-telegram-bot==12.6.1
+pyOpenSSL==19.1.0
+paginate==0.5.6
+PySocks==1.7.1
