--- a/requirements_app.txt
+++ b/requirements_app.txt
@@ -10,6 +10,8 @@ cycler==0.10.0
 DAWG-Python==0.7.2
 decorator==4.4.0
 docopt==0.6.2
+python-dateutil==2.8.1
+python-telegram-bot==12.6.1
 Flask-Login==0.5.0
 Flask-Moment==0.9.0
 Flask-RESTful==0.3.8
